# EternalHushFramework

./: .gitattributes  .gitignore  LICENSE  README.md  compile.py  pom.xml  requirements.txt
.github/: FUNDING.yml
EternalHushCore/: CMakeLists.txt  CMakeSettings.json
EternalHushCore/inc/: Connection.h  CryptoModule.h  CtxobjModule.h  EternalHushCore.h  Handlers.h  InternalModule.h  NetModule.h  PyInterpreter.h  TaskFormat.h  TcpClient.h  TcpServer.h  common.h  structs.h
EternalHushCore/src/: CryptoModule.cpp  CtxobjModule.cpp  EternalHushCore.cpp  GuiClientHandler.cpp  InternalModule.cpp  NetModule.cpp  PyInterpreter.cpp  Tasking.cpp  TcpClient.cpp  TcpServer.cpp
modules/ClSp/: module.xml  private.key  public.key
modules/ClSp/additional/: clingyspider.py
modules/ClSp/bin_files/: CMakeLists.txt
modules/ClSp/bin_files/ClSp_Tcp_Exe/: CMakeLists.txt  ClSp_Tcp_Exe.cpp  bind_tcp.cpp  common.cpp  dispatcher.cpp  mem_ldr.cpp  net.cpp  rsa.cpp  start_executable.cpp
modules/ClSp/bin_files/Exec/: CMakeLists.txt  RegisterModule.cpp
modules/ClSp/bin_files/Get/: CMakeLists.txt  RegisterModule.cpp
modules/ClSp/bin_files/KeyGen/: CMakeLists.txt  main.cpp
modules/ClSp/handlers/: clsp_msg_handler.py
modules/ClSp/scripts/: ClSp_connect.py  ClSp_prepare.py  exec.py  get.py  keygen.py  put.py  pwd.py  whoami.py
modules/EtHu/: module.xml
modules/EtHu/additional/: error_codes.py
modules/EtHu/scripts/: ClSp_connect.py  banner.py  echo.py  exec.py  test.py
prebuilt/: autorun.py  settings.ini
prebuilt/modules/EtHu/: module.xml
src/main/java/gui/: BasicFrame.java  (+7 more)
(+47 files in other folders)
